# tezcheck

./: .gitignore  .gitlab-ci.yml  README.md  dune-project  flake.nix  tezcheck.opam  tezcheck.opam.template
.github/workflows/: main.yml
src/lib/: dune  sig.ml  tezcheck.ml
src/lib/absinterp/: absinterp.ml  dune
src/lib/analysis/: control_flow.ml  dune  reaching_definitions.ml  sign_analysis.ml  taint_analysis.ml
src/lib/dataflow/: backward.ml  cfg.ml  dataflow.ml  dune  forward.ml  inter_transfer.ml  sig.mli  solvers.ml  transfer.ml
src/lib/domains/: apron_helper.ml#  domain.ml  dune  interval.ml  interval.mli  interval_domain.ml  interval_domain.ml#  interval_domain.mli  interval_ext_domain.ml  lambda.ml  lambda.mli  lambda_ext.ml  non_relational_domain.ml  type.ml  type.ml#  value_domain.ml
src/lib/framework/: call_context.ml  common.ml  dataflow.ml  dependencies.ml  imperative_multi_map.ml  imperative_multi_map.mli  solvers.ml
src/lib/lattices/: dune  flat.ml  lattices.ml  map.ml  map.mli  pair.ml  powerset.ml  powerset.mli  sequence.ml  sig.mli  sign.ml  sign_lattice.ml  taint.mli  taint_lattice.ml  uniform_product.ml  with_bottom.ml  with_top.ml
src/lib/utils/: dune  mapWithDefault.ml  multiPHashtbl.ml  myHashtbl.ml  mySet.ml  parsing_utils.ml  utils.ml
src/test/: dune  test.ml
